--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,13 +4,18 @@
 // Variables
 @import 'variables';
 
-$primary: #3e3c7d;
-$secondary: #6370e0;
+$primary: #2d66af;
+$secondary: #f2b20e;
 
 $modal-sm: 400px;
 $modal-md: 600px;
-$modal-lg: 1000px;
+$modal-lg: 1000px; 
 $modal-xl: 1240px;
+
+$btn-border-radius: 0px;
+$nav-pills-border-radius: 0px;
+$card-border-radius: 0px;
+$input-border-radius: 0px;
 
 
 // Bootstrap
