--- a/resources/js/components/Global/MediaFile/MediaFileUpload/MediaFileUploadComponent.css
+++ b/resources/js/components/Global/MediaFile/MediaFileUpload/MediaFileUploadComponent.css
@@ -37,7 +37,7 @@
     justify-content: center;
 }
 .panel-body .upload-drop-zone .text-info p {
-    color: var(--primary, #3e3c7d);
+    color: var(--primary);
 }
 
 .panel-body .label-load-media-file {
@@ -47,7 +47,6 @@
     top: 414px;
     left: 740px;
     gap: 0px;
-    border-radius: 10px 10px 10px 10px;
     border: 1px solid;
     opacity: 0px;
     background: var(--white, #ffffff);
@@ -65,8 +64,8 @@
 .panel-body .label-load-media-file p {
     margin: 0;
 
-    color: var(--primary, #3e3c7d);
-    font-family: "Roboto", sans-serif;
+    color: var(--primary);
+     
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
@@ -74,14 +73,13 @@
 
 .nav-item {
     background-color: var(--secondary);
-    border-radius: 10px;
     color: var(--white);
     /* font-size: 20px;
     font-weight: 400;
     line-height: 28px; */
     padding: 3px 15px;
 
-    font-family: "Poppins", sans-serif;
+     
 
     font-size: 16px;
     font-weight: 600;
