--- a/resources/js/components/Global/NavBar/NavBarComponent.css
+++ b/resources/js/components/Global/NavBar/NavBarComponent.css
@@ -1,15 +1,11 @@
 .navBar {
-    background: var(--colorMainBar, #e9edff);
+    background: var(--colorMainBar, rgba(45,102,175, 0.6));
     height: 84px;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
     padding: 0 30px;
-
-    position: fixed;
-    z-index: 2;
     width: 100%;
 }
 
@@ -33,7 +29,7 @@
 }
 
 .help-text {
-    font-family: "Poppins", sans-serif;
+     
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
@@ -42,14 +38,14 @@
 }
 
 .close-session a {
-    font-family: "Poppins", sans-serif;
+     
 
     font-size: 16px;
     font-weight: 900;
     line-height: 24px;
     letter-spacing: 0.02em;
     text-decoration: none;
-    color: var(--links, #3e3c7dcf);
+    color: var(--links);
 
 }
 
@@ -79,7 +75,6 @@
 .box-icons {
     width: 38px;
     height: 38px;
-    border-radius: 50%;
     background: var(--accent, #c5d1ff);
     display: flex;
     justify-content: center;
@@ -98,7 +93,7 @@
 }
 
 .text-session {
-    font-family: "Poppins", sans-serif;
+     
     margin: 0;
     font-size: 16px;
     line-height: 24px;
